--- a/index.html
+++ b/index.html
@@ -17,24 +17,50 @@
     --pastel-purple:#cdb7ff;
   }
 
-  /* Reset + prevent horiz scroll */
   *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
-  html,body{ height:100%; margin:0; padding:0; background:var(--peach); font-family:"Poppins",sans-serif; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; overflow-x:hidden; }
+  html,body{
+    height:100%; margin:0; padding:0;
+    background:var(--peach);
+    font-family:"Poppins",sans-serif;
+    overflow-x:hidden;
+  }
 
-  /* Page container */
-  .page{ display:none; height:100vh; width:100vw; padding:24px 18px; position:relative; overflow:hidden; text-align:center; }
+  .page{
+    display:none;
+    height:100vh;
+    width:100vw;
+    padding:24px 18px;
+    position:relative;
+    overflow:hidden;
+    text-align:center;
+  }
   .active{ display:block; }
 
-  /* global decor behind content */
-  .global-decor{ position:absolute; inset:0; z-index:0; pointer-events:none; }
+  .global-decor{
+    position:absolute;
+    inset:0;
+    z-index:0;
+    pointer-events:none;
+  }
 
-  /* Headings & emoji */
-  h1{ color:var(--title); font-size:34px; font-weight:700; margin:8px 0 10px; position:relative; z-index:3; }
-  .emoji{ font-size:56px; margin-bottom:8px; position:relative; z-index:3; }
+  h1{
+    color:var(--title);
+    font-size:34px;
+    font-weight:700;
+    margin:8px 0 10px;
+    position:relative;
+    z-index:3;
+  }
 
-  /* Card box (strongly opaque so text readable) */
+  .emoji{
+    font-size:56px;
+    margin-bottom:8px;
+    position:relative;
+    z-index:3;
+  }
+
   .card-box{
-    background: rgba(255,255,255,0.98);
+    background:rgba(255,255,255,0.98);
     max-width:880px;
     width:min(94%,820px);
     padding:18px;
@@ -44,44 +70,114 @@
     text-align:center;
     position:relative;
     z-index:4;
+    word-break:break-word;
+    hyphens:none;
   }
 
-  /* Make sure text wraps and never overflows */
-  .card-box, .card-box * { word-wrap: break-word; word-break: break-word; hyphens: auto; }
+  .btn{
+    background:var(--btn);
+    border:none;
+    color:#fff;
+    padding:12px 22px;
+    border-radius:14px;
+    font-size:18px;
+    cursor:pointer;
+  }
 
-  .btn{ background:var(--btn); border:none; color:#fff; padding:12px 22px; border-radius:14px; font-size:18px; cursor:pointer; }
+  .subtitle{
+    color:#975044;
+    font-size:18px;
+    margin:0 auto 12px;
+    max-width:900px;
+    line-height:1.4;
+    position:relative;
+    z-index:3;
+  }
 
-  .subtitle{ color:#975044; font-size:18px; margin:0 auto 12px; max-width:900px; line-height:1.4; position:relative; z-index:3; }
+  /* Heart Rain */
+  .heart-rain{
+    position:absolute;
+    inset:0;
+    overflow:hidden;
+    z-index:2;
+    pointer-events:none;
+  }
+  .heart{
+    position:absolute;
+    top:-5%;
+    will-change:transform,opacity;
+    animation-name:fall,sway,fadeInSmall;
+    animation-iteration-count:infinite,infinite,1;
+    animation-timing-function:linear,ease-in-out,ease-in;
+  }
 
-  /* heart rain */
-  .heart-rain{ position:absolute; inset:0; overflow:hidden; z-index:2; pointer-events:none; }
-  .heart{ position:absolute; top:-5%; will-change:transform,opacity; animation-name:fall,sway,fadeInSmall; animation-iteration-count:infinite,infinite,1; animation-timing-function:linear,ease-in-out,ease-in; }
   @keyframes fall{ to{ transform:translateY(120vh);} }
-  @keyframes sway{ 0%{ transform:translateX(0);} 50%{ transform:translateX(12px);} 100%{ transform:translateX(0);} }
-  @keyframes fadeInSmall{ from{ opacity:0; transform:scale(.9);} to{ opacity:.95; transform:scale(1);} }
+  @keyframes sway{
+    0%{ transform:translateX(0); }
+    50%{ transform:translateX(12px); }
+    100%{ transform:translateX(0); }
+  }
+  @keyframes fadeInSmall{
+    from{ opacity:0; transform:scale(.9); }
+    to{ opacity:.95; transform:scale(1); }
+  }
 
-  .muted-medium{ font-size:20px; color:var(--pastel-purple); font-weight:600; margin-top:6px; position:relative; z-index:3; }
+  .muted-medium{
+    font-size:20px;
+    color:var(--pastel-purple);
+    font-weight:600;
+    margin-top:6px;
+    z-index:3;
+    position:relative;
+  }
 
-  .pastel-pink-desc{ background:var(--pastel-pink); padding:14px; border-radius:12px; display:inline-block; text-align:left; color:#6b2f38; font-size:17px; max-width:820px; margin-top:14px; position:relative; z-index:4; }
+  .pastel-pink-desc{
+    background:var(--pastel-pink);
+    padding:14px;
+    border-radius:12px;
+    text-align:left;
+    font-size:17px;
+    color:#6b2f38;
+    max-width:820px;
+    margin-top:14px;
+    position:relative;
+    z-index:4;
+  }
 
-  /* cursive message (single paragraph) */
-  .cursive{ font-family:"Brush Script MT","Lucida Handwriting","Segoe Script",cursive; font-size:18px; line-height:1.6; color:#000; text-align:left; white-space:normal; margin:0; padding:0 6px; }
+  /* FINAL CLEAN CURSIVE PARAGRAPH (NO HYPHENS EVER) */
+  .cursive{
+    font-family:"Brush Script MT","Lucida Handwriting","Segoe Script",cursive;
+    font-size:18px;
+    line-height:1.6;
+    color:#000;
+    white-space:normal;
+    margin:0;
+    padding:0 8px;
+    hyphens:none;
+    -webkit-hyphens:none;
+    -ms-hyphens:none;
+    word-break:normal;
+  }
 
-  /* decorations */
-  .decor-item{ position:absolute; pointer-events:none; user-select:none; transform-origin:center; }
+  .decor-item{
+    position:absolute;
+    pointer-events:none;
+    user-select:none;
+  }
 
   @media(max-width:600px){
     h1{ font-size:26px; }
     .emoji{ font-size:44px; }
     .card-box{ padding:14px; }
     .subtitle{ font-size:16px; }
-    .cursive{ font-size:17px; line-height:1.7; }
+    .cursive{ font-size:17px; }
   }
 </style>
 </head>
+
 <body>
 
-<!-- background decorations -->
+<!-- Background emojis -->
 <div id="decorLayer" class="global-decor"></div>
 
 <!-- PAGE 1 -->
@@ -91,11 +187,10 @@
   <div class="emoji">🎈🎉🌸🎂</div>
   <h1 id="title">Wishing You Happpiii Birthdayyyy Nidhi 🎈</h1>
 
-  <!-- Put subtitle inside a centered element but keep it separate from the card so layout stable -->
   <p class="subtitle">A little surprise waiting for you. Hope you'll like it.</p>
 
-  <div class="card-box" role="region" aria-label="Open Surprise">
-    <p style="margin:6px 0 12px 0;">Open the surprise and enjoy ✨</p>
+  <div class="card-box">
+    <p style="margin:6px 0 12px;">Open the surprise and enjoy ✨</p>
     <button class="btn" onclick="nextPage()">Open Surprise 🎁</button>
   </div>
 </div>
@@ -120,14 +215,14 @@
 
   <div class="card-box" style="text-align:left;">
     <p style="font-weight:600;margin-bottom:10px;">I may not know what you’re wishing for, but I really hope the thing your heart is asking for reaches you soon. 🌷</p>
-    <p style="margin:0 0 12px 0;">
+    <p style="margin:0 0 12px;">
       Close your eyes for a moment and make a small wish, the kind that quietly sits in your heart. Let it float out into the world, nice and easy. And I really hope it finds you today, in the simplest, sweetest way… and keeps bringing little moments of happiness your way for a long, long time. 🤞🏻🩷
     </p>
     <div style="text-align:center;"><button class="btn" onclick="nextPage()">Next ➜</button></div>
   </div>
 </div>
 
-<!-- PAGE 4 (single paragraph cursive) -->
+<!-- PAGE 4 (FINAL SINGLE PARAGRAPH — NO HYPHENS) -->
 <div id="page4" class="page">
   <div class="emoji">💌</div>
   <h1>This is a small message from me 💌</h1>
@@ -149,62 +244,73 @@ document.getElementById('title').innerText = `Wishing You Happpiii Birthdayyyy $
 let page = 1;
 function nextPage(){
   if(page === 1) stopHeartRain();
-  document.getElementById('page' + page).classList.remove('active');
+  document.getElementById('page'+page).classList.remove('active');
   page++;
-  if(!document.getElementById('page' + page)) page = 4;
-  document.getElementById('page' + page).classList.add('active');
+  if(!document.getElementById('page'+page)) page=4;
+  document.getElementById('page'+page).classList.add('active');
 }
 
 /* Heart rain */
-const heartContainer = document.getElementById('heartRain');
-let heartInterval = null;
-const heartEmojis = ['💜','💛','💙','❤','💚'];
-function randomBetween(a,b){ return Math.random()*(b-a)+a; }
+const heartContainer=document.getElementById("heartRain");
+let heartInterval=null;
+const heartEmojis=['💜','💛','💙','❤','💚'];
+
+function randomBetween(a,b){return Math.random()*(b-a)+a;}
+
 function createHeart(){
-  const s = document.createElement('span');
-  s.className = 'heart';
-  s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-  s.style.left = randomBetween(5,95) + 'vw';
-  s.style.fontSize = Math.floor(randomBetween(16,32)) + 'px';
-  const duration = randomBetween(10,18);
-  s.style.animationDuration = `${duration}s, ${randomBetween(3,6)}s, 0.6s`;
-  s.style.opacity = (randomBetween(0.78,1)).toString();
-  s.style.zIndex = 2;
+  const s=document.createElement("span");
+  s.className="heart";
+  s.innerText=heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
+  s.style.left=randomBetween(5,95)+'vw';
+  s.style.fontSize=Math.floor(randomBetween(16,32))+'px';
+  const d=randomBetween(10,18);
+  s.style.animationDuration=`${d}s, ${randomBetween(3,6)}s, 0.6s`;
+  s.style.opacity=randomBetween(0.78,1);
+  s.style.zIndex=2;
   heartContainer.appendChild(s);
-  setTimeout(()=>{ if(s.parentNode) s.remove(); }, (duration+1)*1000);
+  setTimeout(()=>{ if(s.parentNode) s.remove(); }, (d+1)*1000);
 }
+
 function startHeartRain(){
   for(let i=0;i<8;i++) setTimeout(createHeart, i*260);
-  if(!heartInterval) heartInterval = setInterval(()=>{
-    const n = Math.random()>0.6 ? 2 : 1;
-    for(let i=0;i<n;i++) createHeart();
-  }, 700);
+  if(!heartInterval){
+    heartInterval=setInterval(()=>{
+      const n=Math.random()>0.6?2:1;
+      for(let i=0;i<n;i++) createHeart();
+    },700);
+  }
 }
-function stopHeartRain(){ if(heartInterval){ clearInterval(heartInterval); heartInterval = null; } document.querySelectorAll('#heartRain .heart').forEach(h=>h.remove()); }
-window.addEventListener('load', ()=>{ if(document.getElementById('page1').classList.contains('active')) startHeartRain(); });
 
-/* Decorative background emojis across all pages - subtle */
-const decorChars = ['🍫','🎈','❤️','💚','💙','💜','💛'];
-const decorLayer = document.getElementById('decorLayer');
-function addDecor(count=44){
-  decorLayer.innerHTML = '';
-  for(let i=0;i<count;i++){
-    const el = document.createElement('div');
-    el.className = 'decor-item';
-    el.innerText = decorChars[Math.floor(Math.random()*decorChars.length)];
-    el.style.left = (Math.random()*100) + '%';
-    el.style.top = (Math.random()*100) + '%';
-    el.style.transform = `translate(-50%,-50%) rotate(${Math.random()*60-30}deg)`;
-    el.style.fontSize = (22 + Math.random()*46) + 'px';
-    el.style.opacity = (Math.random()*0.12 + 0.06).toString(); // faint so text readable
-    decorLayer.appendChild(el);
+function stopHeartRain(){
+  if(heartInterval){
+    clearInterval(heartInterval);
+    heartInterval=null;
+  }
+  document.querySelectorAll('#heartRain .heart').forEach(h=>h.remove());
+}
+
+window.addEventListener('load',()=>startHeartRain());
+
+/* soft background emojis */
+const decorChars=['🍫','🎈','❤️','💚','💙','💜','💛'];
+const decorLayer=document.getElementById("decorLayer");
+
+function addDecor(n=44){
+  decorLayer.innerHTML="";
+  for(let i=0;i<n;i++){
+    const d=document.createElement("div");
+    d.className="decor-item";
+    d.innerText=decorChars[Math.floor(Math.random()*decorChars.length)];
+    d.style.left=(Math.random()*100)+'%';
+    d.style.top=(Math.random()*100)+'%';
+    d.style.transform=`translate(-50%,-50%) rotate(${Math.random()*60-30}deg)`;
+    d.style.fontSize=(22+Math.random()*46)+'px';
+    d.style.opacity=(Math.random()*0.12+0.06);
+    decorLayer.appendChild(d);
   }
 }
 addDecor();
-window.addEventListener('resize', ()=> addDecor());
-
-/* Remove focus outlines that sometimes cause scroll artifacts */
-window.addEventListener('click', ()=>{ document.activeElement && document.activeElement.blur && document.activeElement.blur(); });
+window.addEventListener('resize',()=>addDecor());
 </script>
 
 </body>
