--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Surprise for you</title>
 
-<!-- Poppins -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -70,8 +69,6 @@
     text-align:center;
     position:relative;
     z-index:4;
-    word-break:break-word;
-    hyphens:none;
   }
 
   .btn{
@@ -94,52 +91,54 @@
     z-index:3;
   }
 
-  /* CONFETTI + HEART RAIN LAYERS */
-  .layer-confetti {
+  /* ⭐ FIXED CONFETTI LAYER */
+  .layer-confetti{
     position:absolute;
     inset:0;
-    z-index:2; /* under cards (z-index 4) but above background (z-index 0) */
+    z-index:9999 !important; /* always on top */
     pointer-events:none;
     overflow:hidden;
   }
 
-  .falling {
+  /* ⭐ FIXED FALLING confetti */
+  .falling{
     position:absolute;
     top:-8%;
     will-change:transform,opacity;
     display:inline-block;
     transform-origin:center;
-    /* animation combined: fall and sway and fade-in */
+    z-index:99999 !important;
     animation-name:fallDown, swayX, fadeInFast;
     animation-iteration-count:1, infinite, 1;
     animation-timing-function: linear, ease-in-out, ease-in;
   }
 
-  @keyframes fallDown {
-    to { transform: translateY(120vh) rotate(360deg); }
+  @keyframes fallDown { to{ transform: translateY(120vh) rotate(360deg); } }
+  @keyframes swayX { 
+    0%{ transform:translateX(0); }
+    50%{ transform:translateX(18px); }
+    100%{ transform:translateX(0); }
   }
-  @keyframes swayX {
-    0% { transform: translateX(0px); }
-    50% { transform: translateX(18px); }
-    100% { transform: translateX(0px); }
-  }
-  @keyframes fadeInFast {
-    from { opacity: 0; }
-    to { opacity: 1; }
+  @keyframes fadeInFast { from{opacity:0;} to{opacity:1;} }
+
+  /* HEART RAIN BACKUP */
+  .heart-rain{ position:absolute; inset:0; overflow:hidden; z-index:2; }
+  .heart{
+    position:absolute;
+    top:-5%;
+    animation-name:fall,sway,fadeInSmall;
+    animation-iteration-count:infinite,infinite,1;
+    animation-timing-function:linear,ease-in-out,ease-in;
   }
 
-  /* small heart-rain backup (previous) */
-  .heart-rain{ position:absolute; inset:0; overflow:hidden; z-index:2; pointer-events:none; }
-  .heart{ position:absolute; top:-5%; will-change:transform,opacity; animation-name:fall,sway,fadeInSmall; animation-iteration-count:infinite,infinite,1; animation-timing-function:linear,ease-in-out,ease-in; }
   @keyframes fall{ to{ transform:translateY(120vh);} }
-  @keyframes sway{ 0%{ transform:translateX(0);} 50%{ transform:translateX(12px);} 100%{ transform:translateX(0);} }
-  @keyframes fadeInSmall{ from{ opacity:0; transform:scale(.9);} to{ opacity:.95; transform:scale(1);} }
+  @keyframes sway{ 0%{transform:translateX(0);}50%{transform:translateX(12px);}100%{transform:translateX(0);} }
+  @keyframes fadeInSmall{ from{opacity:0;} to{opacity:.95;} }
 
   .muted-medium{
     font-size:20px;
     color:var(--pastel-purple);
     font-weight:600;
-    margin-top:6px;
     z-index:3;
     position:relative;
   }
@@ -157,57 +156,39 @@
     z-index:4;
   }
 
-  /* FINAL CLEAN CURSIVE PARAGRAPH (NO HYPHENS EVER) */
   .cursive{
     font-family:"Brush Script MT","Lucida Handwriting","Segoe Script",cursive;
     font-size:18px;
     line-height:1.6;
     color:#000;
-    white-space:normal;
-    margin:0;
-    padding:0 8px;
     hyphens:none;
     -webkit-hyphens:none;
     -ms-hyphens:none;
     word-break:normal;
+    padding:0 8px;
   }
 
   .decor-item{
     position:absolute;
     pointer-events:none;
-    user-select:none;
-  }
-
-  @media(max-width:600px){
-    h1{ font-size:26px; }
-    .emoji{ font-size:44px; }
-    .card-box{ padding:14px; }
-    .subtitle{ font-size:16px; }
-    .cursive{ font-size:17px; line-height:1.7; }
   }
 </style>
 </head>
 
 <body>
 
-<!-- Background emojis (soft) -->
 <div id="decorLayer" class="global-decor"></div>
-
-<!-- confetti layer (emojis falling) -->
-<div id="confettiLayer" class="layer-confetti" aria-hidden="true"></div>
-
-<!-- Heart rain backup -->
-<div id="heartRain" class="heart-rain" aria-hidden="true"></div>
+<div id="confettiLayer" class="layer-confetti"></div>
+<div id="heartRain" class="heart-rain"></div>
 
 <!-- PAGE 1 -->
 <div id="page1" class="page active">
   <div class="emoji">🎈🎉🌸🎂</div>
   <h1 id="title">Wishing You Happpiii Birthdayyyy Nidhi 🎈</h1>
-
   <p class="subtitle">A little surprise waiting for you. Hope you'll like it.</p>
 
   <div class="card-box">
-    <p style="margin:6px 0 12px;">Open the surprise and enjoy ✨</p>
+    <p>Open the surprise and enjoy ✨</p>
     <button class="btn" onclick="nextPage()">Open Surprise 🎁</button>
   </div>
 </div>
@@ -216,9 +197,11 @@
 <div id="page2" class="page">
   <h1>Just For You 💐🎂</h1>
 
-  <div class="muted-medium">Congratulations on your 19 or 20th birthday, I don't know your real age, so kindly adjust it 😅</div>
+  <div class="muted-medium">
+    Congratulations on your 19 or 20th birthday — I don't know your real age, so kindly adjust it 😅
+  </div>
 
-  <div class="pastel-pink-desc card-box">
+  <div class="pastel-pink-desc">
     May your birthday be sprinkled with warm sunshine, easy giggles, and those soft little smiles that show up without warning and make your whole day glow. And may this special day whisper to you gently but adorably that the world feels a tiny bit sweeter just because you’re in it. 💛
   </div>
 
@@ -231,11 +214,17 @@
   <h1>Make a Wish ✨</h1>
 
   <div class="card-box" style="text-align:left;">
-    <p style="font-weight:600;margin-bottom:10px;">I may not know what you’re wishing for, but I really hope the thing your heart is asking for reaches you soon. 🌷</p>
-    <p style="margin:0 0 12px 0;">
+    <p style="font-weight:600;">
+      I may not know what you’re wishing for, but I really hope the thing your heart is asking for reaches you soon. 🌷
+    </p>
+
+    <p>
       Close your eyes for a moment and make a small wish, the kind that quietly sits in your heart. Let it float out into the world, nice and easy. And I really hope it finds you today, in the simplest, sweetest way… and keeps bringing little moments of happiness your way for a long, long time. 🤞🏻🩷
     </p>
-    <div style="text-align:center;"><button class="btn" onclick="nextPage()">Next ➜</button></div>
+
+    <div style="text-align:center;">
+      <button class="btn" onclick="nextPage()">Next ➜</button>
+    </div>
   </div>
 </div>
 
@@ -252,172 +241,157 @@ First of all, a Very Happy, Happy Birthday to you, Nidhi. You’ve probably forg
 </div>
 
 <script>
-/* ---------- Basics & pages ---------- */
-const params = new URLSearchParams(window.location.search);
-const name = params.get('name') || 'Nidhi';
-document.getElementById('title').innerText = `Wishing You Happpiii Birthdayyyy ${name} 🎈`;
-
+/* ---------------- BASIC CONFIG ---------------- */
 let page = 1;
 function nextPage(){
-  stopAllEffectsForPage(page);
-  document.getElementById('page' + page).classList.remove('active');
+  stopEffects(page);
+  document.getElementById("page"+page).classList.remove("active");
   page++;
-  if(!document.getElementById('page' + page)) page = 4;
-  document.getElementById('page' + page).classList.add('active');
-  startAllEffectsForPage(page);
+  document.getElementById("page"+page).classList.add("active");
+  startEffects(page);
 }
 
-/* ---------- Heart rain backup (optional) ---------- */
+const params = new URLSearchParams(window.location.search);
+const name = params.get("name") || "Nidhi";
+document.getElementById("title").innerText =
+  `Wishing You Happpiii Birthdayyyy ${name} 🎈`;
+
+/* ---------------- HEART RAIN BACKUP ---------------- */
 const heartContainer = document.getElementById("heartRain");
-let heartInterval = null;
 const heartEmojis = ['💜','💛','💙','❤','💚'];
-function randomBetween(a,b){ return Math.random()*(b-a)+a; }
+let heartInterval;
+
+function random(a,b){ return Math.random()*(b-a)+a; }
+
 function createHeart(){
-  const s=document.createElement('span');
-  s.className='heart';
-  s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-  s.style.left = randomBetween(5,95) + 'vw';
-  s.style.fontSize = Math.floor(randomBetween(16,32)) + 'px';
-  const d = randomBetween(10,18);
-  s.style.animationDuration = `${d}s, ${randomBetween(3,6)}s, 0.6s`;
-  s.style.opacity = randomBetween(0.78,1);
-  s.style.zIndex = 2;
+  const s=document.createElement("span");
+  s.className="heart";
+  s.innerText=heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
+  s.style.left=random(5,95)+"vw";
+  s.style.fontSize=Math.floor(random(16,32))+"px";
+  const d=random(10,18);
+  s.style.animationDuration=`${d}s, ${random(3,6)}s, 0.6s`;
   heartContainer.appendChild(s);
-  setTimeout(()=>{ if(s.parentNode) s.remove(); }, (d+1)*1000);
+  setTimeout(()=>s.remove(), (d+1)*1000);
 }
+
 function startHeartRain(){
-  for(let i=0;i<8;i++) setTimeout(createHeart, i*260);
   if(!heartInterval){
-    heartInterval = setInterval(()=>{
-      const n = Math.random()>0.6 ? 2 : 1;
-      for(let i=0;i<n;i++) createHeart();
-    }, 700);
+    heartInterval=setInterval(()=>{
+      createHeart();
+      if(Math.random()>0.7) createHeart();
+    },700);
   }
 }
+
 function stopHeartRain(){
-  if(heartInterval){ clearInterval(heartInterval); heartInterval = null; }
-  document.querySelectorAll('#heartRain .heart').forEach(h=>h.remove());
+  clearInterval(heartInterval);
+  heartInterval=null;
+  document.querySelectorAll(".heart").forEach(h=>h.remove());
 }
 
-/* ---------- Confetti system (emoji falling) ---------- */
-const confettiLayer = document.getElementById('confettiLayer');
-let confettiInterval = null;
-let burstTimeouts = [];
+/* ---------------- CONFETTI ---------------- */
+const confettiLayer=document.getElementById("confettiLayer");
+let confettiInterval;
+let burstTimers=[];
 
-// sets for each page
-const sets = {
-  1: ['💜','💛','💙','❤','💚','💗','💖'],
-  2: ['🍫','💜','💛','💙','❤','💚'],
-  3: ['💜','💛','💙','❤','💚']
+const sets={
+  1:['💜','💛','💙','❤','💚','💗','💖'],
+  2:['🍫','💜','💛','💙','❤','💚'],
+  3:['💜','💛','💙','❤','💚']
 };
 
-function spawnConfettiEmoji(emoji, leftVw, sizePx, fallDurationSec, swayDurationSec, rotateStart){
-  const el = document.createElement('div');
-  el.className = 'falling';
-  el.innerText = emoji;
-  el.style.left = leftVw + 'vw';
-  el.style.fontSize = sizePx + 'px';
-  // animation durations: fallDuration (single-run), swayDuration (infinite), fade in (0.4s)
-  el.style.animationDuration = `${fallDurationSec}s, ${swayDurationSec}s, 0.45s`;
-  el.style.opacity = 0;
-  el.style.transform = `rotate(${rotateStart}deg)`;
+function spawn(emoji,left,size,fallDur,swayDur){
+  const el=document.createElement("div");
+  el.className="falling";
+  el.innerText=emoji;
+  el.style.left=left+"vw";
+  el.style.fontSize=size+"px";
+  el.style.animationDuration=`${fallDur}s, ${swayDur}s, 0.4s`;
   confettiLayer.appendChild(el);
-  // cleanup after fall completes
-  setTimeout(()=>{ if(el && el.parentNode) el.remove(); }, (fallDurationSec + 0.6) * 1000);
-  return el;
+  setTimeout(()=>el.remove(), (fallDur+0.5)*1000);
 }
 
-function confettiBurstForPage(p, count = 40){
-  const arr = sets[p] || sets[1];
+function burst(page,count=40){
+  const arr=sets[page];
   for(let i=0;i<count;i++){
-    const left = Math.random()*100;
-    const size = Math.floor(randomBetween(18,44));
-    const dur = randomBetween(6,11); // burst pieces fall faster but still slow
-    const sway = randomBetween(3.5,6);
-    const rot = Math.floor(Math.random()*360);
-    const emoji = arr[Math.floor(Math.random()*arr.length)];
-    const t = setTimeout(()=> spawnConfettiEmoji(emoji, left, size, dur, sway, rot), Math.random()*240);
-    burstTimeouts.push(t);
+    const t=setTimeout(()=>{
+      spawn(
+        arr[Math.floor(Math.random()*arr.length)],
+        Math.random()*100,
+        random(20,44),
+        random(6,12),
+        random(3.5,6)
+      );
+    }, Math.random()*300);
+    burstTimers.push(t);
   }
 }
 
-function startConfettiRainForPage(p){
-  stopConfettiRain(); // safety
-  // spawn gently every tick
-  confettiInterval = setInterval(()=>{
-    const arr = sets[p] || sets[1];
-    const n = Math.random() > 0.7 ? 3 : (Math.random()>0.5?2:1);
+function startConfetti(page){
+  stopConfetti();
+  confettiInterval=setInterval(()=>{
+    const arr=sets[page];
+    const n=Math.random()>0.6?2:1;
     for(let i=0;i<n;i++){
-      const left = Math.random()*100;
-      const size = Math.floor(randomBetween(18,38));
-      const dur = randomBetween(9,16); // slow fall
-      const sway = randomBetween(3.5,6);
-      const rot = Math.floor(Math.random()*360);
-      const emoji = arr[Math.floor(Math.random()*arr.length)];
-      spawnConfettiEmoji(emoji, left, size, dur, sway, rot);
+      spawn(
+        arr[Math.floor(Math.random()*arr.length)],
+        Math.random()*100,
+        random(18,38),
+        random(9,16),
+        random(3.4,6)
+      );
     }
-  }, 600);
+  },600);
 }
 
-function stopConfettiRain(){
-  if(confettiInterval){ clearInterval(confettiInterval); confettiInterval = null; }
-  burstTimeouts.forEach(t=>clearTimeout(t));
-  burstTimeouts = [];
-  // remove existing confetti nodes
-  document.querySelectorAll('#confettiLayer .falling').forEach(n=>n.remove());
+function stopConfetti(){
+  clearInterval(confettiInterval);
+  confettiInterval=null;
+  burstTimers.forEach(t=>clearTimeout(t));
+  burstTimers=[];
+  document.querySelectorAll(".falling").forEach(e=>e.remove());
 }
 
-/* ---------- Start/stop per page helpers ---------- */
-function startAllEffectsForPage(p){
-  if(p === 1){
-    // page1: burst + slow rain + heart backup
+/* ---------------- EFFECT CONTROLLER ---------------- */
+function startEffects(p){
+  if(p===1){
     startHeartRain();
-    confettiBurstForPage(1, 40); // initial burst
-    setTimeout(()=> startConfettiRainForPage(1), 250); // then gentle rain
-  } else if(p === 2){
-    // page2: hearts + chocolate rain
-    startConfettiRainForPage(2);
-  } else if(p === 3){
-    startConfettiRainForPage(3);
-  } else {
-    // page4: none
+    burst(1);
+    setTimeout(()=>startConfetti(1),250);
   }
+  if(p===2) startConfetti(2);
+  if(p===3) startConfetti(3);
 }
 
-function stopAllEffectsForPage(p){
-  stopConfettiRain();
+function stopEffects(){
   stopHeartRain();
+  stopConfetti();
 }
 
-/* ---------- Background decorative emojis (soft) ---------- */
-const decorChars = ['🍫','🎈','❤️','💚','💙','💜','💛'];
-const decorLayer = document.getElementById('decorLayer');
-function addDecor(n=44){
-  decorLayer.innerHTML = '';
+/* ---------------- DECOR ---------------- */
+const decorLayer=document.getElementById("decorLayer");
+const decorChars=['🍫','🎈','❤️','💚','💙','💜','💛'];
+
+function addDecor(n=50){
+  decorLayer.innerHTML="";
   for(let i=0;i<n;i++){
-    const d = document.createElement('div');
-    d.className = 'decor-item';
-    d.innerText = decorChars[Math.floor(Math.random()*decorChars.length)];
-    d.style.left = (Math.random()*100) + '%';
-    d.style.top = (Math.random()*100) + '%';
-    d.style.transform = `translate(-50%,-50%) rotate(${Math.random()*60-30}deg)`;
-    d.style.fontSize = (22 + Math.random()*46) + 'px';
-    d.style.opacity = (Math.random()*0.12 + 0.06);
+    const d=document.createElement("div");
+    d.className="decor-item";
+    d.innerText=decorChars[Math.floor(Math.random()*decorChars.length)];
+    d.style.left=(Math.random()*100)+"%";
+    d.style.top=(Math.random()*100)+"%";
+    d.style.opacity=(Math.random()*0.12 + 0.05);
+    d.style.fontSize=(22+Math.random()*46)+"px";
     decorLayer.appendChild(d);
   }
 }
 
-/* ---------- Init ---------- */
-window.addEventListener('load', ()=>{
+window.onload=()=>{
   addDecor();
-  startAllEffectsForPage(1); // start confetti for slide1 immediately
-});
-window.addEventListener('resize', ()=> addDecor());
-
-/* small safety to avoid focus outlines causing scroll */
-window.addEventListener('click', ()=>{ document.activeElement && document.activeElement.blur && document.activeElement.blur(); });
-
+  startEffects(1);
+};
+window.onresize=()=>addDecor();
 </script>
-
 </body>
 </html>
